Fixed LoginModal component clipping on close.

--- a/src/styles/login-modal.scss
+++ b/src/styles/login-modal.scss
@@ -3,6 +3,8 @@
 @use 'members' as *;
 
 .login-modal {
+	position: fixed;
+	inset: 0;
     display: flex;
     flex-flow: column nowrap;
     min-width: 100%;
